+ [doc] Documentation for distributing phpMyAdmin in README.VENDOR.
+ [display] headwords for sorted column 
- bug #2033962 [import] Cannot import zip file
+ [lang] Swedish update, thanks to Björn T. Hallberg
- bug #2050068 [gui] "Check tables having overhead" selects wrong tables
+ [lang] Belarusian update, thanks to Jaska Zedlik

2.11.9.0 (not yet released)
- bug #2031221 [auth] Links to version number on login screen 
- bug #2032707 [core] PMA does not start if ini_set() is disabled 
- bug #2004915 [bookmarks] Saved queries greater than 1000 chars not
  displayed, thanks to Maik Wiege - mswiege
- bug #2037381 [export] Export type "replace" does not work
- bug #2037375 [export] DROP PROCEDURE needs IF EXISTS 
- bug #2045512 [export] Numbers in Excel export

2.11.8.0 (2008-07-28)
- patch #1987593 [interface] Table list pagination in navi, 
  thanks to Jason Day - jday29
- bug #1989081 [profiling] Profiling causes query to be executed again
  (really causes a problem in case of INSERT/UPDATE)
- bug #1990342 [import] SQL file import very slow on Windows,
  thanks to Richard Heaton - wotnot
- bug [XHTML] problem with tabindex and radio fields
- bug #1971221 [interface] tabindex not set correctly
- bug [views] VIEW name created via the GUI was not protected with backquotes
- bug #1989813 [interface] Deleting multiple views (space in name)
- bug #1992628 [parser] SQL parser removes essential space 
- bug #1989281 [export] Export fails if one table is marked as crashed
- bug #2001005 [GUI] ARCHIVE cannot have indexes 
- bug #1989281 [export] CSV for MS Excel incorrect escaping of double quotes
- bug #1959855 [interface] Font size option problem when no config file
  (todo (trunk): navi frame size does not change for theme original)
- bug #1982489 [relation] Relationship view should check for changes 
- bug [history] Do not save too big queries in history
- [security] Do not show version info on login screen
- bug #2018595 [import] Potential data loss on import resubmit 