@@ -1,4 +1,4 @@
-﻿<?php
+<?php
 /* $Id$ */
 
 /**
@@ -25,6 +25,7 @@ $strAccessDenied = 'Ingen tilgang';
 $strAccessDeniedCreateConfig = 'En mulig årsak for dette er at du ikke opprettet konfigurasjonsfila. Du bør kanskje bruke %1$ssetup script%2$s for å opprette en.';
 $strAccessDeniedExplanation = 'phpMyAdmin forsøkte å koble til MySQL-serveren, og serveren avviste tilkoblingen. Du må kontrollere vert (host), brukernavn (username) og passord (password) i config.inc.php og sjekke at de tilsvarer den informasjonen du fikk fra MySQL-server administratoren.';
 $strAction = 'Handling';
+$strActions = 'Handlinger';
 $strAddAutoIncrement = 'Legg til AUTO_INCREMENT verdi';
 $strAddClause = 'Legg til %s';
 $strAddConstraints = 'Legg til begrensninger';
@@ -64,6 +65,7 @@ $strAPrimaryKey = 'En primærnøkkel har blitt lagt til %s';
 $strArabic = 'arabisk';
 $strArmenian = 'armensk';
 $strAscending = 'Stigende';
+$strAsDefined = 'Som definert:';
 $strAtBeginningOfTable = 'Ved begynnelsen av tabellen';
 $strAtEndOfTable = 'Ved slutten av tabellen';
 $strAttr = 'Attributter';
@@ -142,6 +144,7 @@ $strCollation = 'Sammenligning';
 $strColumnNames = 'Kolonnenavn';
 $strColumnPrivileges = 'Kolonne-spesifikke privilegier';
 $strCommand = 'Kommando';
+$strComment = 'Kommentar';
 $strComments = 'Kommentarer';
 $strCompatibleHashing = 'MySQL&nbsp;4.0 kompatibel';
 $strCompleteInserts = 'Komplette innlegg';
@@ -180,6 +183,7 @@ $strCreationDates = 'Opprettelse/Oppdaterings/Kontrolldato';
 $strCriteria = 'Kriterier';
 $strCroatian = 'kroatisk';
 $strCSV = 'CSV';
+$strCustomColor = 'Egendefinert farge';
 $strCyrillic = 'kyrillisk';
 $strCzech = 'tjekkisk';
 $strCzechSlovak = 'Tjekkoslovakisk';
@@ -224,6 +228,7 @@ $strDescending = 'Synkende';
 $strDescription = 'Beskrivelse';
 $strDesigner = 'Designer';
 $strDesignerHelpDisplayField = 'Visningsfeltet er markert i rosa. For å slå på/av et felt som visningsfelt, klikk på "Velg felt for visning" ikonet, klikk så på det aktuelle feltnavnet.';
+$strDetails = 'Detaljer...';
 $strDictionary = 'ordbok';
 $strDirectLinks = 'Direkte linker';
 $strDirtyPages = 'Endrede sider';
@@ -271,6 +276,7 @@ $strEscapeWildcards = 'Jokertegnene _ og % må beskyttes med en \ for å bruke d
 $strEsperanto = 'Esperanto';
 $strEstonian = 'estisk';
 $strEvent = 'Hendelse';
+$strEvents = 'Hendelser';
 $strExcelEdition = 'Excel-versjon';
 $strExecuteBookmarked = 'Utfør lagret spørring';
 $strExplain = 'Forklar SQL';
@@ -305,6 +311,7 @@ $strFlushTable = 'Oppfrisk tabellen ("FLUSH")';
 $strFlushTables = 'Flush (close) all tables';
 $strFontSize = 'Fontstørrelse';
 $strForeignKeyError = 'Feil oppstod under forsøk på opprettelse av fremmednøkkel på %1$s (kontroller datatyper)';
+$strForeignKeyRelationAdded = 'FOREIGN KEY relasjon lagt til';
 $strFormat = 'Format';
 $strFormEmpty = 'Manglende verdi i skjemaet!';
 $strFreePages = 'Ledige sider';
@@ -374,8 +381,10 @@ $strInnoDBPages = 'sider';
 $strInnodbStat = 'InnoDB status';
 $strInsecureMySQL = 'Din konfigurasjonsfil inneholder innstillinger (root uten passord) som korrensponderer med MySQLs standard priviligerte brukerkonto. Din MySQL-tjener kjører med denne standardinnstillingen, er åpen for misbruk, og du burde fikse dette sikkerhetshullet snarest.';
 $strInsert = 'Sett inn';
-$strInsertedRowId = 'Insatt rad id: %1$d';
 $strInsertAsNewRow = 'Sett inn som ny rad';
+$strInsertedRowId = 'Insatt rad id: %1$d';
+$strInterface = 'Grensesnitt';
+$strInternalAndForeign = 'En intern relasjon er ikke nødvendig når en tilsvarende FOREIGN KEY relasjon eksisterer.';
 $strInternalRelationAdded = 'Intern relasjon lagt til';
 $strInternalRelations = 'Interne relasjoner';
 $strInUse = 'i bruk';
@@ -533,20 +542,45 @@ $strOr = 'Eller';
 $strOverhead = 'Overheng';
 $strOverwriteExisting = 'Overskriv eksisterende fil(-er)';
 
+$strPacked = 'Pakket';
 $strPageNumber = 'Sidenummer:';
 $strPagesToBeFlushed = 'Sider som skal tømmes';
 $strPaperSize = 'Papirstørrelse';
 $strPartialImport = 'Delvis importering';
 $strPartialText = 'Delvis tekst';
 $strPartition = 'Partisjon %s';
-$strPartitioned = 'partisjonert';
 $strPartitionDefinition = 'Partisjonsdefinisjon';
+$strPartitioned = 'partisjonert';
 $strPartitionMaintenance = 'Partisjonsvedlikehold';
 $strPassword = 'Passord';
 $strPasswordChanged = 'Passordet til %s er endret.';
 $strPasswordEmpty = 'Passordet er blankt!';
 $strPasswordHashing = 'Passordnøkling';
 $strPasswordNotSame = 'Passordene er ikke like!';
+$strPBXTCheckpointFrequency = 'Kontrollpunktfrekvens';
+$strPBXTCheckpointFrequencyDesc = 'Mengden data skrevet til transaksjonsloggen før en punktsjekk blir utført. Standard verdi er 24MB.';
+$strPBXTDataFileGrowSize = 'Datafil vekststørrelse';
+$strPBXTDataFileGrowSizeDesc = 'Vekststørrelsen til "handle data" filene (.xtd).';
+$strPBXTDataLogThreshold = 'Dataloggterskel';
+$strPBXTDataLogThresholdDesc = 'Maksimum størrelse på en dataloggfil. Standard verdi er 64MB. PBXT can opprette maksimum 32000 datalogger, som er brukt av alle tabeller. Så verdien av denne variabelen kan økes for å øke den totale mengden data som kan lagres i databasen.';
+$strPBXTGarbageThreshold = 'Søppelterskel';
+$strPBXTGarbageThresholdDesc = 'Prosentandelen søppel på en dataloggfil før den komprimeres. Dette er en verdi mellom 1 og 99. Standard er 50.';
+$strPBXTIndexCacheSize = 'Indeksmellomlagerstørrelse';
+$strPBXTIndexCacheSizeDesc = 'Dette er mengden minne tilordnet indeksmellomlageret. Standard verdi er 32MB. Minnet tilordnet her brukes kun for mellomlagring av indekssider.';
+$strPBXTLogBufferSize = 'Loggbufferstørrelse';
+$strPBXTLogBufferSizeDesc = 'Størrelsen på mellomlageret som brukes ved skriving av en datalogg. Standard verdi er 256MB. Databasemotoren tillordner ett buffer per tråd, men bare hvis tråden er påkrevd å skrive en datalogg.';
+$strPBXTLogCacheSize = 'Loggmellomlagerstørrelse';
+$strPBXTLogCacheSizeDesc = 'Mengden minne tilordnet transaksjonsloggmellomlageret brukt til å mellomlagre transakjsonsloggdata. Standard verdi er 16MB.';
+$strPBXTLogFileCount = 'Antall loggfiler';
+$strPBXTLogFileCountDesc = 'Dette er det antall transaksjonsloggfiler (pbxt/system/xlog*.xt) som systemet will opprettholde. Hvis antall logger overstiger denne verdien vil gamle logger bli slettet, ellers så vil de bli gitt nytt navn og gitt det neste høyeste nummeret.';
+$strPBXTLogFileThreshold = 'Loggfilterskel';
+$strPBXTLogFileThresholdDesc = 'Størrelsen til en transaksjonslogg før rollover, og en ny logg blir opprettet. Standard verdi er 16MB.';
+$strPBXTRecordCacheSize = 'Radmellomlagerstørrelse';
+$strPBXTRecordCacheSizeDesc = 'Mengden minne tilordnet radmellomlageret brukt til å mellomlagre tabelldata. Standard verdi er 32MB. Dette minnet blir brukt til å mellomlagre endringer til "handle data" (.xtd) og radpeker (.xtr) filer.';
+$strPBXTRowFileGrowSize = 'Radfil vekststørrelse';
+$strPBXTRowFileGrowSizeDesc = 'Vekststørrelsen til radpekerfilene (.xtr).';
+$strPBXTTransactionBufferSize = 'Transaksjonsbufferstørrelse';
+$strPBXTTransactionBufferSizeDesc = 'Størrelsen til det globale transaksjonsloggmellomlageret (databasemotoren tilordner 2 mellomlager med denne størrelsen). Standard verdi er 1MB.';
 $strPDF = 'PDF';
 $strPdfDbSchema = 'Skjema for "%s"-databasen - Side %s';
 $strPdfInvalidTblName = 'Tabellen "%s" eksisterer ikke!';
@@ -559,6 +593,7 @@ $strPerSecond = 'per sekund';
 $strPersian = 'Persisk';
 $strPhoneBook = 'telefonkatalog';
 $strPhp = 'Lag PHP kode';
+$strPHPExtension = 'PHP tillegg';
 $strPHPVersion = 'PHP-Versjon';
 $strPleaseSelectPrimaryOrUniqueKey = 'Velg primærnøkkelen eller en unik nøkkel';
 $strPmaDocumentation = 'phpMyAdmin-Dokumentasjon';
@@ -640,6 +675,8 @@ $strRecommended = 'anbefalt';
 $strRecords = 'Rader';
 $strReferentialIntegrity = 'Sjekk referanseintegritet:';
 $strRefresh = 'Oppdater';
+$strRelationalDisplayField = 'Relasjonsvisningsfelt';
+$strRelationalKey = 'Relasjonsnøkkel';
 $strRelationalSchema = 'Relasjonsskjema';
 $strRelationDeleted = 'Relasjon slettet';
 $strRelationNotWorking = 'Tilleggsfunksjonene for å kunne jobbe med koblede tabeller er deaktivert. For å finne ut hvorfor, klikk %sher%s.';
@@ -897,8 +934,13 @@ $strStructure = 'Struktur';
 $strStructureForView = 'Visningsstruktur';
 $strSubmit = 'Send';
 $strSuccess = 'Kommandoen/spørringen er utført';
+$strSuhosin = 'Tjeneren kjører med Suhosin. Sjekk %sdokumentasjonen%s for potensielle problemer.';
 $strSum = 'Sum';
 $strSwedish = 'svensk';
+$strSwekeyAuthenticating = 'Autentiserer...';
+$strSwekeyAuthFailed = 'Maskinvaregodkjenning mislyktes';
+$strSwekeyNoKey = 'Ingen gyldig autentiseringsnøkkel plugget';
+$strSwekeyNoKeyId = 'Fila %s inneholder ingen nøkkel id';
 $strSwitchToDatabase = 'Bytt til kopiert database';
 $strSwitchToTable = 'Bytt til kopiert tabell';
 
@@ -922,6 +964,7 @@ $strTakeIt = 'velg';
 $strTblPrivileges = 'Tabell-spesifikke privilegier';
 $strTempData = 'Midlertidige data';
 $strTextAreaLength = ' På grunn av sin lengde,<br /> så vil muligens dette feltet ikke være redigerbart ';
+$strTexyText = 'Texy! tekst';
 $strThai = 'thai';
 $strTheme = 'Tema / Stil';
 $strThemeDefaultNotFound = 'Standard stil %s ble ikke funnet!';
@@ -1009,13 +1052,16 @@ $strView = 'Vis';
 $strViewDump = 'Vis dump (skjema) av tabell';
 $strViewDumpDatabases = 'Vis dumpet skjema av databaser';
 $strViewDumpDB = 'Vis dump (skjema) av database';
+$strViewHasAtLeast = 'Denne visningen har minst dette antall rader. Sjekk %sdocumentation%s.';
 $strViewHasBeenDropped = 'Visningen %s har blitt slettet';
 $strViewName = 'VIEW navn';
 
+$strWebServer = 'Webserver';
 $strWebServerUploadDirectory = 'webtjener opplastingskatalog';
 $strWebServerUploadDirectoryError = 'Katalogen du anga for opplasting kan ikke nåes';
 $strWelcome = 'Velkommen til %s';
 $strWestEuropean = 'vesteuropeisk';
+$strWiki = 'Wiki';
 $strWildcard = 'jokertegn';
 $strWindowNotFound = 'Målvinduet kunne ikke oppdateres. Muligens du har lukket modervinduet eller din nettleser blokkerer vindu-til-vindu oppdateringer av sikkerhetsårsaker.';
 $strWithChecked = 'Med avkrysset:';
@@ -1029,50 +1075,5 @@ $strYes = 'Ja';
 $strZeroRemovesTheLimit = 'Merk: Ved å sette disse til 0 (null) fjernes begrensningen.';
 $strZip = 'Komprimert (zip)';
 
-$strTexyText = 'Texy! text';  //to translate
-$strDetails = 'Details...';  //to translate
-$strComment = 'Comment';  //to translate
-$strPacked = 'Packed';  //to translate
-$strActions = 'Actions';  //to translate
-$strInterface = 'Interface';  //to translate
-$strSuhosin = 'Server running with Suhosin. Please refer to %sdocumentation%s for possible issues.';  //to translate
-$strEvents = 'Events';  //to translate
-$strForeignKeyRelationAdded = 'FOREIGN KEY relation added';  //to translate
-$strInternalAndForeign = 'An internal relation is not necessary when a corresponding FOREIGN KEY relation exists.';  //to translate
-$strViewHasAtLeast = 'This view has at least this number of rows. Please refer to %sdocumentation%s.';  //to translate
-$strRelationalKey = 'Relational key';  //to translate
-$strRelationalDisplayField = 'Relational display field';  //to translate
-$strSwekeyNoKey = 'No valid authentication key plugged';  //to translate
-$strSwekeyNoKeyId = 'File %s does not contain any key id';  //to translate
-$strSwekeyAuthFailed = 'Hardware authentication failed';  //to translate
-$strSwekeyAuthenticating = 'Authenticating...';  //to translate
-$strPBXTIndexCacheSize = 'Index cache size';  //to translate
-$strPBXTRecordCacheSize = 'Record cache size';  //to translate
-$strPBXTLogCacheSize = 'Log cache size';  //to translate
-$strPBXTLogFileThreshold = 'Log file threshold';  //to translate
-$strPBXTTransactionBufferSize = 'Transaction buffer size';  //to translate
-$strPBXTCheckpointFrequency = 'Checkpoint frequency';  //to translate
-$strPBXTDataLogThreshold = 'Data log threshold';  //to translate
-$strPBXTGarbageThreshold = 'Garbage threshold';  //to translate
-$strPBXTLogBufferSize = 'Log buffer size';  //to translate
-$strPBXTDataFileGrowSize = 'Data file grow size';  //to translate
-$strPBXTRowFileGrowSize = 'Row file grow size';  //to translate
-$strPBXTRowFileGrowSizeDesc = 'The grow size of the row pointer (.xtr) files.';  //to translate
-$strPBXTDataFileGrowSizeDesc = 'The grow size of the handle data (.xtd) files.';  //to translate
-$strPBXTLogBufferSizeDesc = 'The size of the buffer used when writing a data log. The default is 256MB. The engine allocates one buffer pre thread, but only if the thread is required to write a data log.';  //to translate
-$strPBXTGarbageThresholdDesc = 'The percentage of garbage in a data log file before it is compacted. This is a value between 1 and 99. The default is 50.';  //to translate
-$strPBXTDataLogThresholdDesc = 'The maximum size of a data log file. The default value is 64MB. PBXT can create a maximum of 32000 data logs, which are used by all tables. So the value of this variable can be increased to increase the total amount of data that can be stored in the database.';  //to translate
-$strPBXTCheckpointFrequencyDesc = 'The amount of data written to the transaction log before a checkpoint is performed. The default value is 24MB.';  //to translate
-$strPBXTTransactionBufferSizeDesc = 'The size of the global transaction log buffer (the engine allocates 2 buffers of this size). The default is 1MB.';  //to translate
-$strPBXTLogFileThresholdDesc = 'The size of a transaction log before rollover, and a new log is created. The default value is 16MB.';  //to translate
-$strPBXTLogCacheSizeDesc = 'The amount of memory allocated to the transaction log cache used to cache on transaction log data. The default is 16MB.';  //to translate
-$strPBXTRecordCacheSizeDesc = 'This is the amount of memory allocated to the record cache used to cache table data. The default value is 32MB. This memory is used to cache changes to the handle data (.xtd) and row pointer (.xtr) files.';  //to translate
-$strPBXTIndexCacheSizeDesc = 'This is the amount of memory allocated to the index cache. Default value is 32MB. The memory allocated here is used only for caching index pages.';  //to translate
-$strPBXTLogFileCount = 'Log file count';  //to translate
-$strPBXTLogFileCountDesc = 'This is the number of transaction log files (pbxt/system/xlog*.xt) the system will maintain. If the number of logs exceeds this value then old logs will be deleted, otherwise they are renamed and given the next highest number.';  //to translate
-$strAsDefined = 'As defined:';  //to translate
-$strWiki = 'Wiki';  //to translate
-$strWebServer = 'Web server';  //to translate
-$strPHPExtension = 'PHP extension';  //to translate
-$strCustomColor = 'Custom color';  //to translate
+
 ?>
